generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url  	    = env("DATABASE_URL")
  directUrl = env("DATABASE_URL_UNPOOLED")
}

// ─── Enums ────────────────────────────────────────────────────────────────────

enum UserStatus {
  ONLINE
  OFFLINE
  AWAY
}

enum ConversationType {
  DIRECT
  GROUP
  CHANNEL
}

enum MemberRole {
  OWNER
  ADMIN
  MEMBER
}

enum MessageType {
  TEXT
  COMMAND
  SYSTEM
  IMAGE
  AUDIO
  FILE
  STICKER
}

// ─── Models ───────────────────────────────────────────────────────────────────

model User {
  id           String     @id @default(uuid())
  email        String     @unique
  username     String     @unique
  displayName  String?
  passwordHash String
  avatarUrl    String?
  status       UserStatus @default(OFFLINE)

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  memberships  ConversationMember[]
  messages     Message[]
  reactions    MessageReaction[]
  readReceipts MessageReadReceipt[]
}

model Conversation {
  id       String           @id @default(uuid())
  type     ConversationType
  title    String?
  imageUrl String?

  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  members  ConversationMember[]
  messages Message[]
}

model ConversationMember {
  id             String @id @default(uuid())
  conversationId String
  userId         String
  role           MemberRole @default(MEMBER)

  joinedAt DateTime @default(now())
  muted    Boolean  @default(false)
  archived Boolean  @default(false)

  conversation Conversation @relation(fields: [conversationId], references: [id])
  user         User         @relation(fields: [userId], references: [id])

  @@unique([conversationId, userId])
}

model Message {
  id             String  @id @default(uuid())
  conversationId String
  senderId       String?

  type        MessageType @default(TEXT)
  content     String?
  commandName String?
  metadata    Json?
  replyToId   String?

  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  editedAt  DateTime?
  deletedAt DateTime?

  conversation Conversation @relation(fields: [conversationId], references: [id])
  sender       User?        @relation(fields: [senderId], references: [id])

  attachments  MessageAttachment[]
  reactions    MessageReaction[]
  readReceipts MessageReadReceipt[]
}

model MessageAttachment {
  id        String  @id @default(uuid())
  messageId String

  url      String
  mimeType String
  fileName String?
  size     Int?

  createdAt DateTime @default(now())

  message Message @relation(fields: [messageId], references: [id])
}

model MessageReaction {
  id        String @id @default(uuid())
  messageId String
  userId    String
  emoji     String

  createdAt DateTime @default(now())

  message Message @relation(fields: [messageId], references: [id])
  user    User    @relation(fields: [userId], references: [id])

  @@unique([messageId, userId, emoji])
}

model MessageReadReceipt {
  id        String   @id @default(uuid())
  messageId String
  userId    String
  readAt    DateTime @default(now())

  message Message @relation(fields: [messageId], references: [id])
  user    User    @relation(fields: [userId], references: [id])

  @@unique([messageId, userId])
}

model CommandInvocation {
  id             String  @id @default(uuid())
  conversationId String
  userId         String
  commandName    String
  input          String?
  output         Json?
  success        Boolean
  error          String?

  createdAt DateTime @default(now())
}
