@startuml chat-lab-er
!theme plain
title Chat Lab — Diagrama Entidad-Relación

skinparam linetype ortho
skinparam entity {
  BackgroundColor #FFFDF0
  BorderColor #999999
  HeaderBackgroundColor #FFF3CC
}
skinparam enum {
  BackgroundColor #F0F8FF
  BorderColor #4A90D9
  HeaderBackgroundColor #D0E8FF
}

entity "User" as User {
  * id : UUID <<PK>>
  --
  * email : String <<unique>>
  * username : String <<unique>>
  displayName : String
  * passwordHash : String
  avatarUrl : String
  * status : UserStatus
  * createdAt : DateTime
  * updatedAt : DateTime
}

entity "Conversation" as Conversation {
  * id : UUID <<PK>>
  --
  * type : ConversationType
  title : String
  imageUrl : String
  * createdAt : DateTime
  * updatedAt : DateTime
}

entity "ConversationMember" as ConversationMember {
  * id : UUID <<PK>>
  --
  * conversationId : UUID <<FK>>
  * userId : UUID <<FK>>
  * role : MemberRole
  * joinedAt : DateTime
  * muted : Boolean
  * archived : Boolean
  --
  <<unique(conversationId, userId)>>
}

entity "Message" as Message {
  * id : UUID <<PK>>
  --
  * conversationId : UUID <<FK>>
  senderId : UUID <<FK, nullable>>
  * type : MessageType
  content : String
  commandName : String
  metadata : Json
  replyToId : UUID
  * createdAt : DateTime
  * updatedAt : DateTime
  editedAt : DateTime
  deletedAt : DateTime
}

entity "MessageAttachment" as MessageAttachment {
  * id : UUID <<PK>>
  --
  * messageId : UUID <<FK>>
  * url : String
  * mimeType : String
  fileName : String
  size : Int
  * createdAt : DateTime
}

entity "MessageReaction" as MessageReaction {
  * id : UUID <<PK>>
  --
  * messageId : UUID <<FK>>
  * userId : UUID <<FK>>
  * emoji : String
  * createdAt : DateTime
  --
  <<unique(messageId, userId, emoji)>>
}

entity "MessageReadReceipt" as MessageReadReceipt {
  * id : UUID <<PK>>
  --
  * messageId : UUID <<FK>>
  * userId : UUID <<FK>>
  * readAt : DateTime
  --
  <<unique(messageId, userId)>>
}

entity "CommandInvocation" as CommandInvocation {
  * id : UUID <<PK>>
  --
  * conversationId : UUID
  * userId : UUID
  * commandName : String
  input : String
  output : Json
  * success : Boolean
  error : String
  * createdAt : DateTime
}

enum "UserStatus" as UserStatus {
  ONLINE
  OFFLINE
  AWAY
}

enum "ConversationType" as ConversationType {
  DIRECT
  GROUP
  CHANNEL
}

enum "MemberRole" as MemberRole {
  OWNER
  ADMIN
  MEMBER
}

enum "MessageType" as MessageType {
  TEXT
  COMMAND
  SYSTEM
  IMAGE
  AUDIO
  FILE
  STICKER
}

User          ||--o{ ConversationMember  : "memberships"
Conversation  ||--o{ ConversationMember  : "members"
User          ||--o{ Message             : "sends"
Conversation  ||--o{ Message             : "contains"
Message       ||--o{ MessageAttachment   : "attachments"
Message       ||--o{ MessageReaction     : "reactions"
Message       ||--o{ MessageReadReceipt  : "readReceipts"
User          ||--o{ MessageReaction     : "reactions"
User          ||--o{ MessageReadReceipt  : "readReceipts"

User              }o--||  UserStatus        : "status"
Conversation      }o--||  ConversationType  : "type"
ConversationMember }o--|| MemberRole        : "role"
Message           }o--||  MessageType       : "type"

@enduml
